2010-04-08  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/icedtea.stamp, stamps/icedtea-debug.stamp):
	Always install nss.cfg.
	* configure.ac: Always make nss.cfg a config file, always
	substitute NSS_LIBDIR.

2010-04-07  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaNPPlugin.cc: ReplaceAll "GCJ" with "ITNP", and
	change other strings to remove reference to GCJ.
	* plugin/icedteanp/IcedTeaNPPlugin.h : Renamed GCJPluginData to
	ITNPPluginData.
	* plugin/icedteanp/IcedTeaPluginUtils.h: Changed debug output to be
	prefixed with "ICEDTEA NP PLUGIN" instead of "GCJ PLUGIN".
	* plugin/icedteanp/java/sun/applet/PluginProxyInfoRequest.java: Don't
	print ArrayIndexOutOfBounds traces. Continue to print any others.

2010-04-07  Xerxes Rånby  <xerxes@zafena.se>

	* configure.ac: Updated check for shared LLVM library to include svn.

2010-04-06  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaJavaRequestProcessor.cc
	(newMessageOnBus): Update to used string pointer vector (form strSplit)
	instead of a string vector. Correctly free memory.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc: Initialize
	message_queue to be a string pointer vector vector instead of a string
	vector vector.
	(newMessageOnBus): Update to used string pointer vector (form strSplit) 
	instead of a string vector. Correctly free memory.
	(sendWindow): Deal with string pointers instead of strings for message
	parts.
	(eval): Same.
	(call): Same.
	(sendString): Same.
	(setMember): Same.
	(sendMember): Same.
	(finalize): Same.
	(queue_processor): Same. Also, free message part memory after processing.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.h: Change method
	signatures to deal with string pointer vectors instead of string vectors.
	* plugin/icedteanp/IcedTeaPluginUtils.cc
	(stringToJSID): Added another signature that receives a string pointer.
	(strSplit): Return string pointer vector instead of string vector.