@@ -415,31 +415,7 @@ then
   AC_SUBST(LIBPULSE_LIBS)
 fi
 
-if test "x${ENABLE_NSS}" = "xyes"
-then
-  PKG_CHECK_MODULES(NSS, nss, [NSS_FOUND=yes], [NSS_FOUND=no])
-  if test "x${NSS_FOUND}" = xno
-  then
-    AC_MSG_ERROR([Could not find NSS.  Either install it or configure using --disable-nss.])
-  fi
-  NSS_LIBDIR=`$PKG_CONFIG --variable=libdir nss`
-else
-  dnl set it to the system library directory
-  if test "x$LDD" = x; then
-    NSS_LIBDIR=/usr/lib
-  else
-    AC_LANG_CONFTEST([AC_LANG_PROGRAM([[]], [[]])])
-    $CC conftest.c
-    syslibdir=`$LDD a.out | sed -n '/libc\.so./s,.*=> */\(@<:@^/@:>@*\)/.*,\1,p'`
-    rm -f a.out
-    case x${syslibdir} in
-      xlib|xlib64|xlib32|xlibn32) NSS_LIBDIR=/usr/${syslibdir};;
-      *) NSS_LIBDIR=/usr/lib
-    esac
-  fi
-fi
-AC_SUBST(NSS_LIBDIR)
-AC_CONFIG_FILES([nss.cfg])
+IT_LOCATE_NSS
 
 if test "x${ZERO_BUILD_TRUE}" = x || test "x${ADD_ZERO_BUILD_TRUE}" = x; then
   dnl Check for libffi headers and libraries.
